# notifyrs

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md
.github/workflows/: main.yaml
src/: main.rs
