[package]
name = "rs_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
lettre = "0.10.4"
rand = "0.8.4"
serde = { version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"

